--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
+    "@yicr/secure-bucket": "0.1.24",
     "aws-cdk-lib": "2.66.0",
     "constructs": "10.0.5",
     "eslint": "^8",
@@ -58,6 +59,7 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
+    "@yicr/secure-bucket": "^0.1.24",
     "aws-cdk-lib": "^2.66.0",
     "constructs": "^10.0.5"
   },
