chore(deps): add deps module with lambda func setting.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -151,7 +151,8 @@
           "**/build-tools/**",
           "**/projenrc/**",
           ".projenrc.ts",
-          "projenrc/**/*.ts"
+          "projenrc/**/*.ts",
+          "src/log-archiver.lambda.ts"
         ],
         "optionalDependencies": false,
         "peerDependencies": true
