--- a/.gitattributes
+++ b/.gitattributes
@@ -18,5 +18,6 @@
 /API.md linguist-generated
 /LICENSE linguist-generated
 /package.json linguist-generated
+/src/log-archiver-function.ts linguist-generated
 /tsconfig.dev.json linguist-generated
 /yarn.lock linguist-generated
