--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -41,6 +41,33 @@
       ],
       "condition": "! git log --oneline -1 | grep -q \"chore(release):\""
     },
+    "bundle": {
+      "name": "bundle",
+      "description": "Prepare assets",
+      "steps": [
+        {
+          "spawn": "bundle:log-archiver.lambda"
+        }
+      ]
+    },
+    "bundle:log-archiver.lambda": {
+      "name": "bundle:log-archiver.lambda",
+      "description": "Create a JavaScript bundle from src/log-archiver.lambda.ts",
+      "steps": [
+        {
+          "exec": "esbuild --bundle src/log-archiver.lambda.ts --target=\"node18\" --platform=\"node\" --outfile=\"assets/log-archiver.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:aws-sdk --sourcemap"
+        }
+      ]
+    },
+    "bundle:log-archiver.lambda:watch": {
+      "name": "bundle:log-archiver.lambda:watch",
+      "description": "Continuously update the JavaScript bundle from src/log-archiver.lambda.ts",
+      "steps": [
+        {
+          "exec": "esbuild --bundle src/log-archiver.lambda.ts --target=\"node18\" --platform=\"node\" --outfile=\"assets/log-archiver.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:aws-sdk --sourcemap --watch"
+        }
+      ]
+    },
     "clobber": {
       "name": "clobber",
       "description": "hard resets to HEAD of origin and cleans the local repo",
@@ -172,7 +199,12 @@
     },
     "pre-compile": {
       "name": "pre-compile",
-      "description": "Prepare the project for compilation"
+      "description": "Prepare the project for compilation",
+      "steps": [
+        {
+          "spawn": "bundle"
+        }
+      ]
     },
     "release": {
       "name": "release",
@@ -203,7 +235,7 @@
       "description": "Run tests",
       "steps": [
         {
-          "exec": "jest --passWithNoTests --updateSnapshot",
+          "exec": "jest --passWithNoTests --silent --updateSnapshot",
           "receiveArgs": true
         },
         {
