--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -55,7 +55,7 @@
       "description": "Create a JavaScript bundle from src/log-archiver.lambda.ts",
       "steps": [
         {
-          "exec": "esbuild --bundle src/log-archiver.lambda.ts --target=\"node18\" --platform=\"node\" --outfile=\"assets/log-archiver.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:aws-sdk --sourcemap"
+          "exec": "esbuild --bundle src/log-archiver.lambda.ts --target=\"node18\" --platform=\"node\" --outfile=\"assets/log-archiver.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/client-cloudwatch-logs --sourcemap"
         }
       ]
     },
@@ -64,7 +64,7 @@
       "description": "Continuously update the JavaScript bundle from src/log-archiver.lambda.ts",
       "steps": [
         {
-          "exec": "esbuild --bundle src/log-archiver.lambda.ts --target=\"node18\" --platform=\"node\" --outfile=\"assets/log-archiver.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:aws-sdk --sourcemap --watch"
+          "exec": "esbuild --bundle src/log-archiver.lambda.ts --target=\"node18\" --platform=\"node\" --outfile=\"assets/log-archiver.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/client-cloudwatch-logs --sourcemap --watch"
         }
       ]
     },
