--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "organization": false
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudwatch-logs": "^3.282.0",
     "@types/aws-lambda": "^8.10.111",
     "@types/jest": "^27",
     "@types/node": "^14",
@@ -70,9 +71,6 @@
     "@yicr/secure-bucket": "^0.1.24",
     "aws-cdk-lib": "^2.66.0",
     "constructs": "^10.0.5"
-  },
-  "dependencies": {
-    "@aws-sdk/client-cloudwatch-logs": "^3.281.0"
   },
   "keywords": [
     "cdk"
