--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@yicr/daily-cloud-watch-log-archiver",
+  "description": "AWS CloudWatch Logs daily archive to s3 bucket",
   "repository": {
     "type": "git",
     "url": "https://github.com/yicr/daily-cloud-watch-log-archiver.git"
@@ -19,6 +20,7 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
+    "package:js": "npx projen package:js",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
@@ -72,10 +74,20 @@
     "constructs": "^10.0.5"
   },
   "keywords": [
-    "cdk"
+    "archive",
+    "aws",
+    "aws-cdk",
+    "bucket",
+    "cdk",
+    "lambda",
+    "s3",
+    "scheduler"
   ],
   "main": "lib/index.js",
   "license": "Apache-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.0",
   "jest": {
     "snapshotSerializers": [
