--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@aws-sdk/client-cloudwatch-logs": "^3.295.0",
     "@types/aws-lambda": "^8.10.114",
     "@types/jest": "^27",
-    "@types/node": "^14",
+    "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "@yicr/jest-serializer-cdk-asset": "^0.1.50",
@@ -85,6 +85,9 @@
     "s3",
     "scheduler"
   ],
+  "engines": {
+    "node": ">= 16.0.0"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "publishConfig": {
