--- a/package.json
+++ b/package.json
@@ -68,12 +68,12 @@
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "@yicr/secure-log-bucket": "^0.3.15",
+    "@yicr/aws-secure-log-bucket": "^0.5.8",
     "aws-cdk-lib": "^2.66.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@yicr/secure-log-bucket": "^0.3.15"
+    "@yicr/aws-secure-log-bucket": "^0.5.8"
   },
   "resolutions": {
     "@types/prettier": "2.6.0",
