--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "eslint-plugin-import": "^2.27.5",
     "jest": "^27",
     "jest-junit": "^15",
-    "jsii": "1.x",
+    "jsii": "~5.0.0",
     "jsii-diff": "^1.84.0",
     "jsii-docgen": "^7.2.9",
     "jsii-pacmak": "^1.84.0",
-    "jsii-rosetta": "1.x",
+    "jsii-rosetta": "~5.0.0",
     "npm-check-updates": "^16",
     "projen": "^0.71.122",
     "standard-version": "^9",
@@ -74,10 +74,6 @@
   },
   "dependencies": {
     "@yicr/aws-secure-log-bucket": "^0.6.62"
-  },
-  "resolutions": {
-    "@types/babel__traverse": "7.18.2",
-    "@types/prettier": "2.6.0"
   },
   "keywords": [
     "archive",
