--- a/package.json
+++ b/package.json
@@ -38,15 +38,16 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-sdk/client-cloudwatch-logs": "3.360.x",
+    "@aws-sdk/client-cloudwatch-logs": "3.363.x",
     "@types/aws-lambda": "^8.10.119",
     "@types/jest": "^27",
     "@types/node": "^16",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "@yicr/jest-serializer-cdk-asset": "^0.2.103",
+    "@yicr/jest-serializer-cdk-asset": "^0.2.106",
     "aws-cdk-lib": "2.66.0",
-    "aws-sdk-client-mock": "2.x",
+    "aws-sdk-client-mock": "^3",
+    "aws-sdk-client-mock-jest": "^3",
     "constructs": "10.0.5",
     "esbuild": "^0.18.11",
     "eslint": "^8",
@@ -61,19 +62,19 @@
     "jsii-pacmak": "^1.84.0",
     "jsii-rosetta": "~5.0.0",
     "npm-check-updates": "^16",
-    "projen": "^0.71.122",
+    "projen": "^0.71.126",
     "standard-version": "^9",
     "ts-jest": "^27",
     "ts-node": "^10.9.1",
     "typescript": "4.x"
   },
   "peerDependencies": {
-    "@yicr/aws-secure-log-bucket": "^0.6.62",
+    "@yicr/aws-secure-log-bucket": "^0.6.65",
     "aws-cdk-lib": "^2.66.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@yicr/aws-secure-log-bucket": "^0.6.62"
+    "@yicr/aws-secure-log-bucket": "^0.6.65"
   },
   "keywords": [
     "archive",
