--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:js": "npx projen package:js",
+    "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
@@ -144,7 +145,12 @@
   "stability": "stable",
   "jsii": {
     "outdir": "dist",
-    "targets": {},
+    "targets": {
+      "python": {
+        "distName": "gammarer.aws-daily-cloud-watch-logs-archiver",
+        "module": "gammarer.aws_daily_cloud_watch_logs_archiver"
+      }
+    },
     "tsc": {
       "outDir": "lib",
       "rootDir": "src"
