--- a/package.json
+++ b/package.json
@@ -58,17 +58,17 @@
     "eslint-plugin-import": "^2.28.0",
     "jest": "^27",
     "jest-junit": "^15",
-    "jsii": "~5.0.0",
+    "jsii": "5.1.x",
     "jsii-diff": "^1.86.1",
     "jsii-docgen": "^7.2.9",
     "jsii-pacmak": "^1.86.1",
-    "jsii-rosetta": "~5.0.0",
+    "jsii-rosetta": "5.1.x",
     "npm-check-updates": "^16",
     "projen": "^0.72.1",
     "standard-version": "^9",
     "ts-jest": "^27",
     "ts-node": "^10.9.1",
-    "typescript": "4.x"
+    "typescript": "5.1.x"
   },
   "peerDependencies": {
     "@gammarer/aws-secure-bucket": "^0.11.4",
