--- a/package.json
+++ b/package.json
@@ -58,11 +58,11 @@
     "eslint-plugin-import": "^2.28.0",
     "jest": "^27",
     "jest-junit": "^15",
-    "jsii": "5.1.x",
+    "jsii": "~5.0.0",
     "jsii-diff": "^1.86.1",
     "jsii-docgen": "^7.2.9",
     "jsii-pacmak": "^1.86.1",
-    "jsii-rosetta": "5.1.x",
+    "jsii-rosetta": "~5.0.0",
     "npm-check-updates": "^16",
     "projen": "^0.72.1",
     "standard-version": "^9",
