--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-cloudwatch-logs": "3.382.x",
-    "@gammarer/aws-secure-bucket": "0.11.4",
+    "@gammarer/aws-secure-bucket": "0.12.1",
     "@gammarer/jest-serializer-aws-cdk-asset-filename-replacer": "^0.3.16",
     "@types/aws-lambda": "^8.10.119",
     "@types/jest": "^27",
@@ -71,13 +71,13 @@
     "typescript": "4.9.x"
   },
   "peerDependencies": {
-    "@gammarer/aws-secure-bucket": "^0.11.4",
-    "@gammarer/aws-secure-log-bucket": "^0.10.8",
+    "@gammarer/aws-secure-bucket": "^0.12.1",
+    "@gammarer/aws-secure-log-bucket": "^0.12.4",
     "aws-cdk-lib": "^2.80.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@gammarer/aws-secure-log-bucket": "^0.10.8"
+    "@gammarer/aws-secure-log-bucket": "0.12.*"
   },
   "keywords": [
     "archive",
