--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@gammarer/aws-secure-log-bucket": "0.12.*"
+    "@gammarer/aws-secure-log-bucket": "~0.12"
   },
   "keywords": [
     "archive",
