--- a/package.json
+++ b/package.json
@@ -39,9 +39,8 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-sdk/client-cloudwatch-logs": "3.398.x",
-    "@gammarer/aws-secure-bucket": "0.12.6",
-    "@gammarer/jest-serializer-aws-cdk-asset-filename-replacer": "^0.4.0",
+    "@aws-sdk/client-cloudwatch-logs": "3.405.x",
+    "@gammarer/jest-serializer-aws-cdk-asset-filename-replacer": "^0.4.2",
     "@types/aws-lambda": "^8.10.119",
     "@types/jest": "^27",
     "@types/node": "^18",
@@ -64,20 +63,21 @@
     "jsii-pacmak": "^1.88.0",
     "jsii-rosetta": "~5.0.0",
     "npm-check-updates": "^16",
-    "projen": "^0.73.2",
+    "projen": "^0.73.9",
     "standard-version": "^9",
     "ts-jest": "^27",
     "ts-node": "^10.9.1",
     "typescript": "4.9.x"
   },
   "peerDependencies": {
-    "@gammarer/aws-secure-bucket": "^0.12.1",
-    "@gammarer/aws-secure-log-bucket": "^0.12.4",
+    "@gammarer/aws-secure-bucket": "~0.12.4",
+    "@gammarer/aws-secure-log-bucket": "~0.12.6",
     "aws-cdk-lib": "^2.80.0",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@gammarer/aws-secure-log-bucket": "~0.12"
+    "@gammarer/aws-secure-bucket": "~0.12.4",
+    "@gammarer/aws-secure-log-bucket": "~0.12.6"
   },
   "keywords": [
     "archive",
