--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "standard-version": "^9",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "4.9.x"
+    "typescript": "5.1.x"
   },
   "peerDependencies": {
     "@gammarer/aws-secure-bucket": "~0.12.4",
@@ -132,11 +132,13 @@
         }
       ]
     ],
-    "preset": "ts-jest",
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.dev.json"
-      }
+    "transform": {
+      "^.+\\.[t]sx?$": [
+        "ts-jest",
+        {
+          "tsconfig": "tsconfig.dev.json"
+        }
+      ]
     }
   },
   "types": "lib/index.d.ts",
