--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "jest-junit": "^15",
-    "jsii": "~5.0.0",
+    "jsii": "5.1.x",
     "jsii-diff": "^1.94.0",
-    "jsii-docgen": "^7.2.9",
+    "jsii-docgen": "^10.3.5",
     "jsii-pacmak": "^1.94.0",
-    "jsii-rosetta": "~5.0.0",
+    "jsii-rosetta": "5.1.x",
     "projen": "^0.79.2",
     "standard-version": "^9",
     "ts-jest": "^29.1.1",
