--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
   },
   "devDependencies": {
     "@aws-sdk/client-cloudwatch-logs": "3.525.x",
-    "@gammarer/aws-secure-bucket": "1.1.0",
-    "@gammarer/aws-secure-log-bucket": "1.3.0",
     "@gammarer/jest-serializer-aws-cdk-asset-filename-replacer": "^0.4.26",
     "@types/aws-lambda": "^8.10.136",
     "@types/jest": "^29.5.12",
@@ -73,9 +71,13 @@
   },
   "peerDependencies": {
     "@gammarer/aws-secure-bucket": "~1.1.0",
-    "@gammarer/aws-secure-log-bucket": "~1.3.0",
+    "@gammarer/aws-secure-log-bucket": "~1.4.0",
     "aws-cdk-lib": "^2.80.0",
     "constructs": "^10.0.5"
+  },
+  "dependencies": {
+    "@gammarer/aws-secure-bucket": "~1.1.0",
+    "@gammarer/aws-secure-log-bucket": "~1.4.0"
   },
   "keywords": [
     "archive",
