feat: rename pypi dist name & module

--- a/package.json
+++ b/package.json
@@ -156,8 +156,8 @@
         }
       },
       "python": {
-        "distName": "gammarer.aws-daily-cloud-watch-logs-archive-stack",
-        "module": "gammarer.aws_daily_cloud_watch_logs_archive_stack"
+        "distName": "gammarers.aws-daily-cloud-watch-logs-archive-stack",
+        "module": "gammarers.aws_daily_cloud_watch_logs_archive_stack"
       },
       "dotnet": {
         "namespace": "Gammarer.CDK.AWS",
