--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-cloudwatch-logs": "3.787.x",
+    "@gammarers/aws-secure-bucket": "2.1.0",
     "@gammarers/jest-aws-cdk-asset-filename-renamer": "~0.5.8",
     "@stylistic/eslint-plugin": "^2",
     "@types/aws-lambda": "^8.10.149",
@@ -70,14 +71,12 @@
     "typescript": "5.7.x"
   },
   "peerDependencies": {
-    "@gammarers/aws-secure-bucket": "~2.0.8",
-    "@gammarers/aws-secure-log-bucket": "~2.0.7",
+    "@gammarers/aws-secure-bucket": "^2.1.0",
     "aws-cdk-lib": "^2.189.1",
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "@gammarers/aws-secure-bucket": "~2.0.8",
-    "@gammarers/aws-secure-log-bucket": "~2.0.7"
+    "@gammarers/aws-secure-log-bucket": "^2.1.19"
   },
   "keywords": [
     "archive",
