--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -336,7 +336,7 @@
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @aws-sdk/client-cloudwatch-logs @gammarers/jest-aws-cdk-asset-filename-renamer @stylistic/eslint-plugin @types/aws-lambda @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-sdk-client-mock-jest aws-sdk-client-mock commit-and-tag-version esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii projen ts-jest ts-node typescript @gammarers/aws-secure-bucket aws-cdk-lib constructs @gammarers/aws-secure-log-bucket"
+          "exec": "yarn upgrade @aws-sdk/client-cloudwatch-logs @gammarers/jest-aws-cdk-asset-filename-renamer @stylistic/eslint-plugin @types/aws-lambda @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-sdk-client-mock-jest aws-sdk-client-mock commit-and-tag-version esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii projen ts-jest ts-node typescript aws-cdk-lib constructs @gammarers/aws-secure-log-bucket"
         },
         {
           "exec": "npx projen"
